constraints/cri-mount.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyCriOSocketMount
metadata:
  name: deny-crio-socket-mount
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["apps.openshift.io"]
        kinds: ["DeploymentConfig"]
