constraints/emptydir.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sOnlyTmpTmpfs
metadata:
  name: require-tmp-tmpfs
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
