constraints/env-secret.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenySecretAsEnvironmentVariable
metadata:
  name: deny-secret-as-env-var
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["apps.openshift.io"]
        kinds: ["DeploymentConfig"]
