constraints/host-privilages.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyHostPrivileges
metadata:
  name: deny-host-privileges
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["apps.openshift.io"]
        kinds: ["DeploymentConfig"]
    excludedNamespaces:
      - "default"
      - "openshift-*"
  parameters:
    denyHostNetwork: true
    denyHostPID: true
    denyHostIPC: true
