constraints/image-pull-policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sImagePullPolicyNotAlways
metadata:
  name: require-image-pull-policy-not-always
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["apps.openshift.io"]
        kinds: ["DeploymentConfig"]
