constraints/pod-exec.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyExecAttach
metadata:
  name: deny-exec-attach
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["apps.openshift.io"]
        kinds: ["DeploymentConfig"]
