constraints/probe-timestamp.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sLivenessGreaterThanReadiness
metadata:
  name: require-liveness-greater-than-readiness
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: ["apps.openshift.io"]
        kinds: ["DeploymentConfig"]
