constraints/probes.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sProbesRequired
metadata:
  name: require-liveness-readiness-probes
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
