constraints/runasroot.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyRootContainers
metadata:
  name: deny-root-containers
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["apps.openshift.io"]
        kinds: ["DeploymentConfig"]
    excludedNamespaces:
      - "default"
      - "openshift-*"
